Fix confetti layer visibility issue

--- a/style.css
+++ b/style.css
@@ -64,8 +64,15 @@ section {
 }
 
 .section-dark {
-    background-color: #000;
+    background-color: transparent; /* Use a pseudo element instead so background remains transparent */
     color: #fff;
+}
+.section-dark::before {
+    content: '';
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background-color: #000;
+    z-index: -2; /* Sits behind the confetti */
 }
 
 .section-light {
